jekyll安装步骤修改
html页面修正

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="site">
           <div class="header">
-            <h1 class="title"><a href="https://github.com/lightmath/">LiCheng Blog</a></h1>
+            <h1 class="title"><a href="/">lightmath</a></h1>
             <a class="extra" href="/">home</a>
           </div>
 
@@ -35,14 +35,14 @@
           <div class="footer">
             <div class="contact">
               <p>
-                My Name<br />
-                我经常在这里活动<br />
+                我的名字<br />
+                我经常在这里<br />
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/lightmath">licheng</a><br />
-                <a href="http://bbs.9ria.com/?10432">9RIA</a><br />
+                <a href="https://github.com/lightmath">lightmath</a><br />
+                <a href="http://www.9ria.com/">9ria</a><br />
               </p>
             </div>
           </div>
